--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "Connor and Justin Project",
   "main": "dist/bot.js",
   "dependencies": {
+    "@discordjs/opus": "^0.3.3",
     "@types/node": "^14.14.21",
     "discord.js": "^12.5.1",
     "ffmpeg": "0.0.4",
+    "ffmpeg-static": "^4.2.7",
     "mysql2": "^2.2.5",
     "node-fetch": "^2.6.1",
     "yt-search": "^2.5.2",
