--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "discord.js": "^12.5.1",
     "ffmpeg": "0.0.4",
     "ffmpeg-static": "^4.2.7",
+    "moment": "^2.29.1",
     "mysql2": "^2.2.5",
+    "nekos.life": "^2.0.7",
     "node-fetch": "^2.6.1",
+    "systeminformation": "^4.34.7",
     "yt-search": "^2.5.2",
     "ytdl-core": "^4.4.3"
   },
