--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
   "dependencies": {
     "@discordjs/opus": "^0.3.3",
     "@types/node": "^14.14.21",
+    "axios": "^0.21.1",
     "discord.js": "^12.5.1",
     "ffmpeg": "0.0.4",
     "ffmpeg-static": "^4.2.7",
+    "kitsu.js": "^2.0.0",
     "moment": "^2.29.1",
     "mysql2": "^2.2.5",
     "nekos.life": "^2.0.7",
