--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@discordjs/opus": "^0.3.3",
     "@types/node": "^14.14.21",
     "axios": "^0.21.1",
+    "canvas": "^2.6.1",
     "discord.js": "^12.5.1",
     "ffmpeg": "0.0.4",
     "ffmpeg-static": "^4.2.7",
