--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "moment": "^2.29.1",
     "mysql2": "^2.2.5",
     "node-fetch": "^2.6.1",
+    "simple-youtube-api": "^5.2.1",
     "systeminformation": "^4.34.7",
     "yt-search": "^2.5.2",
     "ytdl-core": "^4.4.5"
