--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@types/node": "^14.14.21",
     "axios": "^0.21.1",
     "canvas": "^2.6.1",
+    "dblapi.js": "^2.4.1",
     "discord.js": "^12.5.1",
     "ffmpeg": "0.0.4",
     "ffmpeg-static": "^4.2.7",
